src/rds/snapshots/test_build__rds__tests__closxp.snap
---
source: src/rds/rds_reader.rs
expression: res
---
Sexp {
    kind: Closure(
        Closure {
            formals: [
                Formal {
                    name: Sym {
                        data: "x",
                    },
                    value: Sexp {
                        kind: MissingArg,
                        metadata: MetaData {
                            attr: None,
                        },
                    },
                },
                Formal {
                    name: Sym {
                        data: "y",
                    },
                    value: Sexp {
                        kind: MissingArg,
                        metadata: MetaData {
                            attr: None,
                        },
                    },
                },
            ],
            body: Sexp {
                kind: Lang(
                    Lang {
                        target: Sym(
                            Sym {
                                data: "+",
                            },
                        ),
                        args: [
                            TaggedSexp {
                                tag: None,
                                data: Sexp {
                                    kind: Sym(
                                        Sym {
                                            data: "x",
                                        },
                                    ),
                                    metadata: MetaData {
                                        attr: None,
                                    },
                                },
                            },
                            TaggedSexp {
                                tag: None,
                                data: Sexp {
                                    kind: Sym(
                                        Sym {
                                            data: "y",
                                        },
                                    ),
                                    metadata: MetaData {
                                        attr: None,
                                    },
                                },
                            },
                        ],
                    },
                ),
                metadata: MetaData {
                    attr: None,
                },
            },
            environment: Global,
        },
    ),
    metadata: MetaData {
        attr: None,
    },
}
