src/rds/snapshots/test_build__rds__tests__langsxp_02.snap
---
source: src/rds/rds_reader.rs
expression: res
---
Sexp {
    kind: Lang(
        Lang {
            target: Sym(
                Sym {
                    data: "+",
                },
            ),
            args: [
                TaggedSexp {
                    tag: None,
                    data: Sexp {
                        kind: Sym(
                            Sym {
                                data: "x",
                            },
                        ),
                        metadata: MetaData {
                            attr: None,
                        },
                    },
                },
                TaggedSexp {
                    tag: None,
                    data: Sexp {
                        kind: Real(
                            [
                                1.0,
                            ],
                        ),
                        metadata: MetaData {
                            attr: None,
                        },
                    },
                },
            ],
        },
    ),
    metadata: MetaData {
        attr: None,
    },
}
