src/rds/snapshots/test_build__rds__tests__list_tag_01.snap
---
source: src/rds/rds_reader.rs
expression: res
---
Sexp {
    kind: Vec(
        [
            Sexp {
                kind: Real(
                    [
                        1.0,
                    ],
                ),
                metadata: MetaData {
                    attr: None,
                },
            },
        ],
    ),
    metadata: MetaData {
        attr: Some(
            Sexp {
                kind: List(
                    [
                        TaggedSexp {
                            tag: Some(
                                "names",
                            ),
                            data: Sexp {
                                kind: Str(
                                    [
                                        "a",
                                    ],
                                ),
                                metadata: MetaData {
                                    attr: None,
                                },
                            },
                        },
                    ],
                ),
                metadata: MetaData {
                    attr: None,
                },
            },
        ),
    },
}
