src/rds/snapshots/test_build__rds__tests__real.snap
---
source: src/rds/rds_reader.rs
expression: res
---
Sexp {
    kind: Real(
        [
            1.0,
        ],
    ),
    metadata: MetaData {
        attr: None,
    },
}
